# monopoly

./: CMakeLists.txt  README.md  main.cpp
core/: board.cpp  board.hpp  case.cpp  case.hpp  player.cpp  player.hpp
view/: board_view.cpp  board_view.hpp  case_view.cpp  case_view.hpp  views.hpp
